# tdchess

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  build_pgo  build_pgo.sh  build_tune.sh  chess.h  endgame.h  engine.h  evaluation.h  main.cpp  nnue.h  param.h  perf.txt  see.h  table.h  timecontrol.py  timer.h  trainer.h  uci.h  version.txt
nets/: .gitignore
sprt/: .gitignore  fast.sh  start.sh  start_960.sh  start_sf.sh  start_thread.sh
src/: helper.h  main.cpp  version.h
src/elo/: agent.h  arena.h  book.h  elo.h  pentanomial.h  stats.h
src/engine/: chess.h  chess960.h  chessmap.h  cuckoo.h  endgame.h  engine.h  evaluation.h  features.h  helper.h  heuristic.h  lazysmp.h  legal.h  mcts.h  movegen.h  nnue.h  nnue2.h  param.h  rep.h  see.h  simd.h  sorting.h  table.h  time_control.h  timer.h  uci.h  util.h
src/hpplib/: chess.h  incbin.h  reader.h
src/tuner/: spsa.h  tuner.h
